# krypton

./: .gitignore  Cargo.toml  README.md  THREAD_POOL_CHANGES.md
doc/: CHINESE_SUPPORT.md
docs/: progress_fix_summary.md  progress_refactoring_summary.md
examples/: async_crypto_demo.rs  crypto_architecture_demo.rs  large_file_encryption.rs  thread_pool_demo.rs  ui_progress_test.rs
src/: app.rs  core.rs  lib.rs  main.rs  models.rs  progress.rs
src/crypto/: aes.rs  chacha20.rs  engine.rs  mod.rs  traits.rs
src/ui/: dialogs.rs  mod.rs  panels.rs
test_architecture/: test1.txt  test1.txt.enc1  test1.txt.enc1.enc2  test1.txt.enc2  test2.txt  test2.txt.enc1  test2.txt.enc1.enc2  test2.txt.enc2  test3.txt  test3.txt.enc1  test3.txt.enc1.enc2  test3.txt.enc2
test_async_crypto/: large_file.txt  large_file.txt.async_enc  large_file.txt.async_enc.cancel_enc  large_file.txt.async_enc.progress_enc  large_file.txt.async_enc.progress_enc.cancel_enc  large_file.txt.cancel_enc  large_file.txt.progress_enc  large_file.txt.progress_enc.cancel_enc  medium_file.txt  medium_file.txt.async_enc  medium_file.txt.async_enc.progress_enc  medium_file.txt.progress_enc  small_file.txt  small_file.txt.async_enc  small_file.txt.async_enc.progress_enc  small_file.txt.progress_enc
test_files/: large_test_file.txt.enc
test_ui_progress/: file1.txt  file1.txt.uitest  file2.txt  file2.txt.uitest  file3.txt  file3.txt.uitest
