[package]
name = "krypton"
version = "0.1.0"
edition = "2021"

[[example]]
name = "large_file_encryption"
path = "examples/large_file_encryption.rs"

[[example]]
name = "crypto_architecture_demo"
path = "examples/crypto_architecture_demo.rs"

[dependencies]
egui = "0.29.0"
eframe = "0.29.0"
env_logger = "0.10"
rfd = "0.15"
aes = "0.8"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
rayon = "1.8"
hex = "0.4"

